--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -35,14 +35,14 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="/books/details/<%= book[count]._id %>" class="btn btn-primary">Edit</a>
+                    <a href="/books/edit/<%= books[count]._id %>" class="btn btn-primary">Edit</a>
                   </td>
 
                   <td class="text-center">
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="/books/details/<%= book[count]._id %>" class="btn btn-primary">Delete</a>
+                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-primary">Delete</a>
                   </td>
                 </tr>
                 <% } %>
