--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -8,7 +8,7 @@
           <!-- ------------------------ -->
           <!-- FIX THE ADD BUTTON BELOW -->
           <!-- ------------------------ -->
-          <a href="/books/details" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
+          <a href="/books/details/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
           <br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
@@ -35,7 +35,7 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="/books/edit/<%= books[count]._id %>" class="btn btn-primary">Edit</a>
+                    <a href="/books/details/<%= books[count]._id %>" class="btn btn-primary">Edit</a>
                   </td>
 
                   <td class="text-center">
