--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -1,3 +1,8 @@
+<!-- File Name: Midterm Test
+    Name: Asheka Hall
+    Student Id: 301064568 
+    Date: October 28, 2020 */-->
+
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
