--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -1,7 +1,8 @@
 <!-- File Name: Midterm Test
     Name: Asheka Hall
     Student Id: 301064568 
-    Date: October 28, 2020 */-->
+    Date: October 25, 2020 
+    WebApp: https://comp-f2020-midterm-301064568.herokuapp.com-->
 
 <% include ../partials/header.ejs %>
 
