--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -2,7 +2,7 @@
     Name: Asheka Hall
     Student Id: 301064568 
     Date: October 25, 2020 
-    WebApp: https://comp-f2020-midterm-301064568.herokuapp.com-->
+    WebApp: Your Favourite Books-->
 
 <% include ../partials/header.ejs %>
 
