--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -48,7 +48,7 @@
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-primary">Delete</a>
+                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger">Delete</a>
                   </td>
                 </tr>
                 <% } %>
